--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html ng-app="GZCApp">
 <head lang="cn">
     <meta charset="UTF-8">
-    <title>GZC_QUERY</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/bootstrap.v3.2.0.css"/>
     <link rel="stylesheet" href="css/common.css"/>
     <link rel="stylesheet" href="css/module.main.css"/>
+    <title>GZC_QUERY</title>
 </head>
 <body>
 <div class="" ng-view></div>
