--- a/public/B2B2C/index.html
+++ b/public/B2B2C/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="css/bootstrap.v3.2.0.css"/>
     <link rel="stylesheet" href="css/common.css"/>
     <link rel="stylesheet" href="css/module.main.css"/>
-    <title>GZC_QUERY</title>
+    <title>跨境个人税单查询</title>
 </head>
 <body>
-<div class="" ng-view></div>
+<div ng-view></div>
 
 <script src="js/lib/jquery/jquery.js"></script>
 <script src="js/lib/angular/angular.1.3.js"></script>
