--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/bootstrap.v3.2.0.css"/>
     <link rel="stylesheet" href="css/common.css"/>
+    <!--<script src="js/lib/jquery/jquery.js"></script>-->
+    <script src="js/lib/angular/angular.1.3.js"></script>
+    <script src="js/lib/angular/angular-route.js"></script>
+    <script src="js/lib/angular/angular-resource.js"></script>
+    <!--<script src="js/lib/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>-->
+    <script src="js/common/app.js"></script>
     <title>跨境个人税单查询</title>
 </head>
 <body>
 <div ng-view></div>
-
-<script src="js/lib/jquery/jquery.js"></script>
-<script src="js/lib/angular/angular.1.3.js"></script>
-<script src="js/lib/angular/angular-route.js"></script>
-<script src="js/lib/angular/angular-resource.js"></script>
-<script src="js/lib/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
-<script src="js/main/mainController.js"></script>
-<script src="js/common/commonService.js"></script>
-<script src="js/common/app.js"></script>
 </body>
 </html>
