--- a/public/B2B2C/index.html
+++ b/public/B2B2C/index.html
@@ -11,7 +11,7 @@
     <script src="js/lib/angular/angular-resource.js"></script>
     <!--<script src="js/lib/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>-->
     <script src="js/common/app.js"></script>
-    <title>跨境个人税单查询</title>
+    <title>跨境状态查询</title>
 </head>
 <body>
 <div ng-view></div>
