--- a/public/B2B2C/index.html
+++ b/public/B2B2C/index.html
@@ -10,7 +10,7 @@
     <script src="js/lib/angular/angular.min.js"></script>
     <script src="js/lib/angular/angular-route.min.js"></script>
     <script src="js/lib/angular/angular-resource.min.js"></script>
-    <script type="text/javascript" src="js/lib/angular/device-detector.js"></script>
+    <script src="js/common/device-detector.js"></script>
     <script src="js/lib/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="js/common/app.js"></script>
     <title>跨境状态查询</title>
