--- a/public/B2B2C/index.html
+++ b/public/B2B2C/index.html
@@ -12,6 +12,7 @@
     <script src="js/lib/angular/angular-resource.min.js"></script>
     <script src="js/common/device-detector.js"></script>
     <script src="js/lib/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
+    <script src="js/common/spinner.js"></script>
     <script src="js/common/app.js"></script>
     <title>跨境状态查询</title>
 </head>
